--- a/LocalConfig.pde.example
+++ b/LocalConfig.pde.example
@@ -7,6 +7,7 @@ final int MIDI_CHANNEL = 0;
 // String MIDI_DEVICE_NAME = "Native Instruments Kore Player Virtual Input";
 String MIDI_DEVICE_NAME = "LoopBe Internal MIDI";
 final int NUMBER_OF_SIGNALS = 3+3;
+final int NUMBER_OF_BUTTONS = 2+2;
 final boolean SIMULATE_SERIAL_INPUT = false;
 final int NUMBER_OF_LINES_TO_SKIP_ON_INIT = 10;
 final int SERIAL_PORT_NUMBER = 0;
@@ -28,7 +29,7 @@ String[] OUTCOMES_LABEL = { "R null", "L null", "R side hit ", "L reach pop", "R
 int[] MIDI_PITCH_CODES =  { -1, -1, 41, 43, 46, 52, 48, 51, 40 };
 int[] SIGNAL_GROUP_OF_OUTCOME = {0, 1, 0, 1, 0, 1, 1, 1, 0};
 boolean[] SKIP_OUTCOME_WHEN_EVALUATING_BAYESIAN_DETECTOR = {true, true, false, false, false, false, false, false, false};
-
+int[] MIDI_BUTTON_CODES =  {72, 73, 74, 75};
 int[] NULL_OUTCOME_FOR_SIGNAL_GROUP = {0, 1};
 int MAX_NUMBER_OF_EVENTS_FOR_LEARNING = 100;
 // Note: Make sure the following outcomes are from all possible signal groups
